# forge

./: .gitignore  .pre-commit-config.yaml  BROADCAST_UPDATE_SUMMARY.md  CONTRIBUTING.md  README.md  demo.ipynb  error_log  log  pyproject.toml  test_sandboxed_coder.py  test_sandboxed_coder_simple.py
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml
.github/packaging/: post_build_script.sh  pre_build_cpu.sh  pre_build_gpu.sh  vllm_reqs.txt
.github/workflows/: build_vllm.yaml  build_wheels.yaml  docs.yml  gpu_test.yaml  lint.yaml  unit_test.yaml
.meta/mast/: README.md  client_bootstrap.sh  env_setup.sh  hydrate_cache.py  launch.sh  main.py  qwen3_14b_mast.yaml  qwen3_1_7b_mast.yaml  qwen3_32b_mast.yaml  qwen3_4b_mast.yaml  qwen3_8b_mast.yaml
_scratch/: README.md  mast.py  stacked_envs.py
apps/coding-grpo/: llama3_8b.yaml  main.py  qwen2_5_7b.yaml  qwen3_1_7b.yaml  qwen3_32b.yaml  qwen3_8b.yaml
apps/grpo/: main.py  notebook.ipynb  qwen3_1_7b.yaml  qwen3_32b.yaml  qwen3_8b.yaml  qwen3_multinode.yaml
apps/mast/: README.md  env_setup.sh  qwen3_14b_mast.yaml  qwen3_1_7b_mast.yaml  qwen3_32b_mast.yaml  qwen3_4b_mast.yaml  qwen3_8b_mast.yaml
apps/rl/: llama3_8b.yaml  main.py
apps/rl_trainer/: main.py
apps/sft/: llama3_8b.yaml  main.py  qwen3_8b.yaml  sft.py
apps/sft/configs/: llama3_8b.yaml
apps/sft_v2/: llama3_8b.yaml  main.py  qwen3_8b.yaml
apps/toy_metrics/: main.py
apps/toy_rl/: main.py  sumdigits-tp.yaml  sumdigits.py  sumdigits.yaml
apps/toy_rl/toy_metrics/: main.py
apps/vllm/: deepseek_r1.yaml  llama3_8b.yaml  main.py  qwen2_5_32b.yaml
assets/: versions.sh
assets/wheels/: torchstore-0.1.0-py3-none-any.whl  torchtitan-0.1.0-py3-none-any.whl
docs/: Makefile  broadcast_weight_updates.md  make.bat  requirements.txt
docs/Tutorials/: 1_RL_and_Forge_Fundamentals.MD  2_Forge_Internals.MD  3_Monarch_101.MD  ReadMe.MD
docs/source/: api.md  api_actors.md  api_controller.md  api_core.md  api_data.md  api_envs.md  api_generator.md  api_losses.md  api_model.md  api_service.md  api_trainer.md  api_util.md  concepts.md  conf.py  faq.md  getting_started.md  index.md  tutorials.md  usage.md  zero-to-forge-intro.md
docs/source/_static/: custom.css  custom.js
docs/source/tutorial_sources/: README.txt  template_tutorial.py
examples/: broadcast_weight_update.py  rl_main.py  stacked_envs.py
forge/: interfaces.py  train.py  types.py
forge/_cli/: download.py  forge.py  run.py
forge/actors/: collector.py
forge/cli/: config.py  run.py
forge/controller/: README.md   stack.py
forge/data/: __init__.py  about.md  collate.py  common.py  replay_buffer.py  tokenizer.py  utils.py
forge/data/dataset_metrics/: __init__.py  metric_agg_handlers.py  metric_transform.py
forge/data/datasets/: __init__.py  sft_dataset.py
forge/data/environments/: __init__.py  toy.py
forge/data/metrics/: __init__.py  metric_agg_handlers.py  metric_aggregator.py  metric_transform.py  readme.md
forge/data/policies/: __init__.py  toy.py
forge/data/transforms/: __init__.py  tokenizers.py  transforms.py  utils.py
forge/datasets/: __init__.py  hf.py  interleaved.py  iterable_base.py  packed.py  sft.py
forge/distributed/: pipeline.py
forge/envs/: chat.py
forge/monarch_utils/: stack.py
forge/protocols/: tokenizer.py
forge/rl/: __init__.py  collector.py  interfaces.py  replay_buffer.py
forge/rl/environments/: __init__.py  base.py  chat.py
forge/tools/: _import_guard.py  profiling.py  utils.py
launcher/: job.sbatch
scripts/: build_wheels.sh  install.sh
src/forge/: __init__.py  env.py  env_constants.py  interfaces.py  types.py
src/forge/actors/: __init__.py  _torchstore_utils.py  coder.py  collector.py  generator.py  openenv_coder.py  podman_coder.py  policy.py  reference_actor.py  reference_model.py  replay_buffer.py  trainer.py
src/forge/cli/: config.py  download.py  forge.py  run.py
src/forge/controller/: __init__.py  actor.py  interface.py  launcher.py  metrics.py  proc_mesh.py  provisioner.py  recoverable_mesh.py  replica.py  service.md  service.py  spawn.py  (+1 more)
tests/: README.md  conftest.py  test_service.py  test_utils.py
tests/integration_tests/: conftest.py  test_coder.py  test_policy_update.py  test_titan_fwd_vs_hf_fwd.py  test_vllm_policy_correctness.py  test_vllm_policy_same_output.py
tests/unit_tests/: test_coder.py  test_config.py  test_controller.py  test_env_constants.py  test_generator_config.py  test_gpu_manager.py  test_job_config.py  test_monarch_utils.py  test_policy_config.py  test_provisioner.py  test_reference_actor.py  test_replay_buffer.py  test_rl_components.py  test_service.py  test_torchstore_utils.py  test_trainer.py
(+75 files in other folders)
